# exercice-embauche

./: .gitignore
list-to-database/: Cargo.toml  carte-des-pharmacies-de-paris.csv
list-to-database/src/: database_adapter.rs  main.rs
pharmacy-front/: README.md  package.json  pnpm-lock.yaml
pharmacy-front/src/: App.vue  pharmacy-service.js
pharmacy-front/src/components/: PharmacyTable.vue
pharmacy-server/: Cargo.toml  pharmacies.db
pharmacy-server/app/: Cargo.toml
pharmacy-server/app/src/: main.rs
pharmacy-server/core/: Cargo.toml
pharmacy-server/core/src/: lib.rs
pharmacy-server/db-connector/: Cargo.toml
pharmacy-server/db-connector/src/: lib.rs
pharmacy-server/rest-api/: Cargo.toml
pharmacy-server/rest-api/src/: helpers.rs  lib.rs  routes.rs
