[package]
name = "list-to-database"
version = "0.1.0"
authors = ["Rémi Caillot <remicaillot5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
r2d2 = { version = "0.8.9" }
r2d2_sqlite = { version = "0.16.0" }

[dependencies.rusqlite]
version = "0.23.0"
features = ["bundled"]