[package]
name = "app"
version = "0.1.0"
authors = ["Rémi Caillot <remicaillot5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db-connector = { path = "../db-connector"}
rest-api = { path = "../rest-api"}