[package]
name = "db-connector"
version = "0.1.0"
authors = ["Rémi Caillot <remicaillot5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
r2d2 = { version = "0.8.9" }
r2d2_sqlite = { version = "0.16.0" }
core = { path = "../core"}

[dependencies.rusqlite]
version = "0.23.0"
features = ["bundled"]
