[package]
name = "rest-api"
version = "0.1.0"
authors = ["Rémi Caillot <remicaillot5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rocket = "0.4.5"
rocket_contrib = "0.4.5"
chrono = { version = "0.4", features = ["serde"] }
rocket_cors = "0.5.1"
core = { path = "../core"}
db-connector = { path = "../db-connector"}